<resources>
    <string name="app_name">ChatApp</string>
    <string name="item">Contact1</string>
    <string name="tab_name">Tab name</string>
    <string name="messages">Messages</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="contacts">Contacts</string>
    <string name="password">Password</string>
    <string name="emeil">emeil</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_redister">RedisterActivity</string>
    <string name="registration">Registration</string>
    <string name="contact_very_long_name_which_will_be_overlapping">Contact very long name which will be overlapping</string>
    <string name="blala">Blala</string>
    <string name="chatroom">Chatroom</string>
    <string name="logout">logout</string>
    <string name="search">search</string>
    <string name="view_profile">View profile</string>
    <string name="delete_contact">Delete contact</string>
    <string name="add_contact">Add contact</string>
    <string name="search_hint">Enter contact name</string>
    <string name="name">Name</string>

    <!--Strings for navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_coose">Navigation drawer close</string>
    <string name="open_drawer">openDrawer</string>
    <string name="close_drawer">closeDrawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="action_mark_all_read">Mark all as read</string>
    <string name="contact">Contact</string>
    <string name="auth_failed">Failed to SignIn</string>
    <string name="email">Email</string>
    <string name="create_user">Create User</string>
    <string name="time">time</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
</resources>
